Fix X overflow

--- a/docs/_sass/styles.scss
+++ b/docs/_sass/styles.scss
@@ -1,4 +1,7 @@
 // Your website's CSS
+html {
+    overflow-x: hidden
+}
 
 body {
 	font-family: 'Inter', -apple-system, BlinkMacSystemFont, "myriad-pro", sans-serif;
